welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: type mismatch;
 found   : String("0")
 required: Int
		return "0"}	
                       ^close10:7: error: type mismatch;
 found   : Unit
 required: Int
	if (Math.abs(10-a) == Math.abs(10-b) ) {
        ^